Correct vue source files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>1punch</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>blog</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <!-- built files will be auto injected -->
   </body>
 </html>
