Setup frontend dev environment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,36 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      window.INITIAL_STATE = {
+        "user":{
+          "id":1,
+          "email":"wofi.minh@1pac.vn",
+          "role":"member",
+          "owner":false,
+          "name":"Troy Kozey",
+          "gender":"male",
+          "language":"en",
+          "avatar_url":"/static/avatar.png"
+        },
+        "company":{
+          "id":1,
+          "namespace":"namespace_1",
+          "name":"April Simonis",
+          "country":"French Guiana",
+          "industry":"startup",
+          "address":"27755 Janis Village",
+          "phone_number":"1-469-970-9015",
+          "postal_code":"44596",
+          "tax_code":"Ww534703Rg7f43",
+          "activated":true,
+          "timezone":"Asia/Bangkok",
+          "breaktime":1.0,
+          "breakdays":["sunday","saturday"],
+          "logo_url":"/static/logo.png"
+        }
+      }
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
