make company setting pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
           "timezone":"Asia/Bangkok",
           "breaktime":1.0,
           "breakdays":["sunday","saturday"],
+          "language":"en",
           "logo_url":"/static/logo.png"
         }
       }
