Change initial state values

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,11 @@
     <script>
       window.INITIAL_STATE = {
         "user":{
-          "id":1,
-          "email":"wofi.minh@1pac.vn",
-          "role":"member",
+          "id":2,
+          "email":"example@1pac.vn",
+          "role":"superadmin",
           "owner":false,
-          "name":"Troy Kozey",
+          "name":"Clara Mayer",
           "gender":"male",
           "language":"en",
           "avatar_url":"/static/avatar.png"
