Add initial_state data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
     <div id="app"></div>
     <script>
       window.INITIAL_STATE = {
-        "user":{
+        "attendance": {},
+        "user": {
           "id":2,
           "email":"example@1pac.vn",
           "role":"superadmin",
@@ -19,7 +20,7 @@
           "language":"en",
           "avatar_url":"/static/avatar.png"
         },
-        "company":{
+        "company": {
           "id":1,
           "namespace":"namespace_1",
           "name":"April Simonis",
