Display user position

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
           "owner":false,
           "name":"Clara Mayer",
           "gender":"male",
+          "position":"Backend Developer",
           "language":"en",
           "avatar_url":"/static/avatar.png"
         },
