--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,11 +40,11 @@
           "logo_url":"/static/logo.png"
         },
         "meta": {
-          "attendanceStatuses": ["attend_ok", "attend_late", "leave_ok", "leave_early"],
-          "requestStatuses": ["pending", "rejected", "approved"],
+          "attendance_statuses": ["attend_ok", "attend_late", "leave_ok", "leave_early"],
+          "request_statuses": ["pending", "rejected", "approved"],
           "languages": ["en", "vi", "jp"],
           "weekdays": ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"],
-          "holidayCountries": ["vietnam", "japan"],
+          "holiday_countries": ["vietnam", "japan"],
           "timezones": ["Asia/Bangkok", "Asia/Tokyo", "Etc/UTC"],
           "roles": ["member", "admin", "superadmin"],
           "industries": ["hr_agency", "restaurant", "cafe_shop", "software_company", "startup"]
