--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
           "logo_url":"/static/logo.png"
         },
         "meta": {
-          "attendance_statuses": ["attend_ok", "attend_late", "leave_ok", "leave_early"],
+          "attendance_statuses": ["attend_ok", "attend_late", "leave_ok", "leave_early", "annual_leave"],
           "request_statuses": ["pending", "rejected", "approved"],
           "languages": ["en", "vi", "jp"],
           "weekdays": ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"],
