Correct locale name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
         "meta": {
           "attendance_statuses": ["attend_ok", "attend_late", "leave_ok", "leave_early", "annual_leave"],
           "request_statuses": ["pending", "rejected", "approved"],
-          "languages": ["en", "vi", "jp"],
+          "languages": ["en", "vi", "ja"],
           "weekdays": ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"],
           "holiday_countries": ["vietnam", "japan"],
           "timezones": ["Asia/Bangkok", "Asia/Tokyo", "Etc/UTC"],
