Add new initial state

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,8 @@
           "holiday_countries": ["vietnam", "japan"],
           "timezones": ["Asia/Bangkok", "Asia/Tokyo", "Etc/UTC"],
           "roles": ["member", "admin", "superadmin"],
-          "industries": ["hr_agency", "restaurant", "cafe_shop", "software_company", "startup"]
+          "industries": ["hr_agency", "restaurant", "cafe_shop", "software_company", "startup"],
+          "csv_template_url": "/public/static/template.csv"
         }
       }
     </script>
