Update initial states

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,7 @@
           "breakdays":["sunday","saturday"],
           "logo_url":"/static/logo.png"
         },
+        "announcements": [],
         "meta": {
           "attendance_statuses": ["attend_ok", "attend_late", "leave_ok", "leave_early", "annual_leave"],
           "request_statuses": ["pending", "rejected", "approved"],
