Update initial states

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,7 @@
           "request_statuses": ["pending", "rejected", "approved"],
           "languages": ["en", "vi", "ja"],
           "weekdays": ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"],
+          "weekend": ["saturday", "sunday"],
           "holiday_countries": ["vietnam", "japan"],
           "timezones": ["Asia/Bangkok", "Asia/Tokyo", "Etc/UTC"],
           "roles": ["member", "admin", "superadmin"],
