Update initial states data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,8 @@
             "timezones": ["Asia/Bangkok", "Asia/Tokyo", "Etc/UTC"],
             "roles": ["member", "admin", "superadmin"],
             "industries": ["hr_agency", "restaurant", "cafe_shop", "software_company", "startup"],
-            "csv_template_url": "/public/static/template.csv"
+            "csv_template_url": "/public/static/template.csv",
+            "base_url": "http://localhost:3000"
           }
         }
       }
