--- a/public/500.html
+++ b/public/500.html
@@ -9,6 +9,8 @@
 
 <style>
   body {
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+    font-size: 16px;
     background-color: #f0f3f7;
   }
 
