--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
             "deactivated_at": "2018-04-02",
             "activated_at": "2018-04-04",
             "groups": [],
-            "forgot_punch_in_days_in_month": ['2018-05-02', '2018-05-03']
+            "forgot_punch_in_days_in_month": ['2018-05-07', '2018-05-08', '2018-06-20']
           },
           "company": {
             "id":1,
