--- a/public/500.html
+++ b/public/500.html
@@ -4,8 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width">
 
-<title>Punch</title>
-<meta name="description" content="Punch description">
+<title>Punch - Server Internal Error</title>
 
 <style>
   body {
@@ -60,7 +59,7 @@
 
 <body>
   <div class="main">
-    <img src="/static/500.png" alt="500 image">
+    <img src="/500.png">
     <h2>Something’s wrong, Captain!</h2>
     <p>Just try to refresh the page, the problem may be temporary.</p>
     <a href="/" class="btn">Homepage</a>
