--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
             "holiday_countries": ["vietnam", "japan"],
             "timezones": ["Asia/Bangkok", "Asia/Tokyo", "Etc/UTC"],
             "roles": ["member", "admin", "superadmin"],
-            "industries": ["hr_agency", "restaurant", "cafe_shop", "software_company", "startup"],
+            "industries": ["hr_agency", "restaurant", "cafe_shop", "software_company", "startup", "interior_design"],
             "csv_template_url": "/public/static/template.csv",
             "base_url": "http://localhost:3000"
           }
