update default value

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,8 @@
             "timezone":"Asia/Bangkok",
             "breaktime":1.0,
             "breakdays": ["saturday", "sunday"],
-            "logo_url":"/static/logo.png"
+            "logo_url":"/static/logo.png",
+            "punch_method":"default"
           },
           "announcements": [],
           "meta": {
