refactor code personal report

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,7 @@
             "breakdays": ["saturday", "sunday"],
             "logo_url":"/static/logo.png",
             "punch_method":"default",
-            "company_monthly_report": "25"
+            "company_monthly_report": 25
           },
           "announcements": [],
           "meta": {
